[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/manager/SceneManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/menu/Menu.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToNormal"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeToWhite"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.870588, 0.870588, 0.870588, 0 ), Color( 0.972549, 0.972549, 0.972549, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeWhiteToNormal"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.972549, 0.972549, 1 ), Color( 0.734375, 0.734375, 0.734375, 0 ) ]
}

[node name="SceneManager" type="Node2D"]
script = ExtResource( 1 )

[node name="CurrentScene" type="Node2D" parent="."]

[node name="Menu" parent="." instance=ExtResource( 3 )]

[node name="ScreenTransition" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ScreenTransition"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition"]
anims/FadeToBlack = SubResource( 1 )
anims/FadeToNormal = SubResource( 2 )
anims/FadeToWhite = SubResource( 3 )
anims/FadeWhiteToNormal = SubResource( 4 )

[connection signal="animation_finished" from="ScreenTransition/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
